# cargo-husky

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  schema.json
.cargo/: config.toml
.github/workflows/: main.yml
.husky/: pre-commit  pre-push  task-runner.json
assets/: hook  task-runner.json
src/: cli.rs  husky.rs  lib.rs  main.rs
src/husky/: error.rs  filesystem_manager.rs  repository.rs  task_runner.rs  tests.rs  utils.rs
