[package]
name = "c3-cargo-husky"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cargo-husky"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
git2 = "0.20.4"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
mockall = "0.14.0"

