[package]
name = "c3-cargo-husky"
version = "0.1.0"
edition = "2024"
description = "A cargo sub-command to manage git hooks, execute hook scripts and run defined tasks."
authors = [ "Geoff Horsey" ]
license="Apache-2.0 OR MIT"
repository = "https://github.com/code-correct-collective/cargo-husky"
rust-version = "1.87.0"
readme = "README.md"
categories = ["development-tools::cargo-plugins", "command-line-utilities"]
keywords = ["cargo-subcommand", "git", "hook", "hooks", "husky"]
exclude = ["tests/"]

[[bin]]
name = "cargo-husky"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
git2 = "0.20.4"
globset = "0.4.18"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"

[dev-dependencies]
mockall = "0.14.0"

